# Compiler-Frontend-OOP

./: .gitignore  CMakeLists.txt  Makefile  README.md  library_system.py  rectangle.py
grammar/: grammar.y  lexer.l  pooLL1.y
include/: Lexer.h  Num.h  Parser.h  RecursiveDescendant.h  Token.h  TokenStream.h  Word.h
scripts/: dataset.json  dataset.jsonl  process_dataset.py  successful_compilations.json  test.py  valid_codes.jsonl
src/: Lexer.cpp  Num.cpp  Parser.cpp  RecursiveDescendant.cpp  Token.cpp  TokenStream.cpp  Word.cpp  main.cpp
tests/: lexer_tests.cpp  parser_tests.cpp
